# aiohttp-chat

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
chat/: Dockerfile  pyproject.toml  supervisor.conf
chat/app/: __init__.py  config.py  decorators.py  fields.py  forms.py  mixins.py  models.py  utils.py  views.py
chat/app/static/: index.css  index.js
chat/app/templates/: _macros.html  base.html  index.html  login.html  register.html
chat/app/templates/_includes/: flashes.html  navbar.html
nginx/: nginx.conf
